@@ -75,8 +75,31 @@ Adapted to pstoedit 3.30 by Wolfgang Glunz.
    output file `OUTPUT_NAME.ps', and writes some preliminary boilerplate. */
 
 static int output_p2e_header(FILE* ps_file, string name,
-			     int  llx  , int  lly  , int  urx  , int  ury  )
+			     int  llx, int  lly, int  urx, int  ury, spline_list_array_type shape)
 {
+  unsigned this_list, with_curves = 1;
+
+  for (this_list = 0; this_list < SPLINE_LIST_ARRAY_LENGTH (shape);
+       this_list++)
+    {
+      unsigned this_spline;
+
+      spline_list_type list = SPLINE_LIST_ARRAY_ELT (shape, this_list);
+
+      for ( this_spline = 0; this_spline < SPLINE_LIST_LENGTH (list);
+           this_spline++)
+        {
+          spline_type s = SPLINE_LIST_ELT (list, this_spline);
+
+          if (SPLINE_DEGREE (s) != LINEARTYPE)
+            {
+			  with_curves = 0;
+			  this_list = SPLINE_LIST_ARRAY_LENGTH (shape);
+			  break;
+			}
+        }
+
+    }
 
 	OUT_LINE ("%!PS-Adobe-3.0");
 	OUT1     ("%%%%Title: flattened PostScript generated by autotrace: %s\n",name);
@@ -95,7 +118,7 @@ static int output_p2e_header(FILE* ps_file, string name,
 	OUT_LINE ("%%EndProlog");
 	OUT_LINE ("%%BeginSetup");
 	OUT_LINE ("% textastext doflatten backendconstraints  "); 
-	OUT_LINE ("0 0 backendconstraints");
+	OUT1     ("%d 0 backendconstraints\n", with_curves);
 	OUT_LINE ("%%EndSetup");
 
   return 0;
@@ -186,7 +209,7 @@ int output_p2e_writer(FILE* ps_file, string name,
 {
     int result;
 
-    result = output_p2e_header(ps_file, name, llx, lly, urx, ury);
+    result = output_p2e_header(ps_file, name, llx, lly, urx, ury, shape);
     if (result != 0)  return result;
 
     out_splines(ps_file, shape);
